fix z-index on 'add field' menu for Fluid fields
fixes #613
EECORE-1144

--- a/cp-styles/app/styles/components/_fluid.scss
+++ b/cp-styles/app/styles/components/_fluid.scss
@@ -99,6 +99,10 @@
 		max-height: 90vh;
 		overflow-y: auto;
 	}
+
+	&.has-open-dropdown {
+		z-index: 2;
+	}
 }
 
 .fluid__item-tools--item-closed {
